# PhysioAINote

./: .env  .gitignore  .replit  .replit.deployment  .replitignore  CHECK_DEPLOYMENT_LOGS.txt  DEPLOYMENT_BUILD_GUIDE.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_OPTIMIZATION.md  FIX_DEPLOYMENT_INSTRUCTIONS.txt  HAND_TRACKING.md  MOTION_TRACKING_STATUS.md  MOVEMENT_ANALYSIS_DEPLOYMENT_GUIDE.md  bone_axis_test.mjs  bone_axis_verify.mjs  bone_diagnostic.mjs  build-for-deployment.sh  build-minimal.js  build-optimized.js  build-prod.sh  build-production.sh  build.js  cookies.txt  debug-content.js  debug-progressive-submission.js  debug-progressive.js  deploy-backend-only.js  deploy-build-backend-only.js  deploy-build-fixed.js  deploy-build-old.js  deploy-build-production.js  deploy-build-production.mjs  deploy-build-simple.js  deploy-build.js  deploy-build.sh  deploy-build.sh.old  deploy-fixed.cjs  deploy-server.cjs  deploy-server.mjs  deploy-simple.cjs  (+38 more)
.claude/: settings.local.json
client/: copy-assets.js  index.html
migrations/: 0001_active_capacities.sql  0002_research_treatment_plan.sql  0003_case_snapshot.sql
scripts/: drizzle-push-auto.exp  post-merge.sh  pre-push-enums.ts
server/: .env  ahtrPdfService.ts  (+122 more)
soap-note-litellm-streaming/: .env  README.md  db_utils.py  http_utils.py  lambda_function.py  main.py  pyproject.toml  soap_generator.py  soap_note_litellm.py  utils.py
soap-note-litellm-streaming/all_prompts/: assessment_template.txt  goals_template.txt  objective_template.txt  plan_template.txt  promptfile.txt  subjective_template.txt  treatment_template.txt
(+634 files in other folders)
