[tool.poetry]
name = "instant-hire-backend"
version = "0.1.0"
description = "Streaming Soap Note"
authors = ["pushkar@stackaisolutions.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"  # or your actual Python version
fastapi = ">=0.104.0"
uvicorn = { extras = ["standard"], version = ">=0.24.0" }
pydantic = ">=2.0.0"
litellm = ">=1.0.0"
python-dotenv = ">=1.0.0"
boto3 = ">=1.28.0"
botocore = ">=1.31.0"
requests = ">=2.31.0"
python-multipart = ">=0.0.6"
pydantic-settings = ">=2.0.0"
langfuse = ">=2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
